fixed wrap

--- a/docs/css/juss.css
+++ b/docs/css/juss.css
@@ -589,7 +589,9 @@ input:focus:invalid, select:focus:invalid, textarea:focus:invalid {
  */
 .wrap {
   position: relative;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
